Fix containers so that 5+ slots containers have slots properly aligned.

--- a/src/components/Gameplay/GameplayContainer/GameplayContainer.scss
+++ b/src/components/Gameplay/GameplayContainer/GameplayContainer.scss
@@ -43,6 +43,8 @@
         @include gameplayEmptySlot();
 
         justify-content: center;
+        max-width: 455px;
+        margin: auto;
 
         .drop-slot-component:not(:first-child) {
           margin-left: 27px;
